--- a/test/pages/me/me.wxml
+++ b/test/pages/me/me.wxml
@@ -1,5 +1,8 @@
 <!--pages/me/me.wxml-->
-
+<cu-custom bgColor="bg-gradual-pink">
+	<view slot="backText"></view>
+	<view slot="content">我的</view>
+</cu-custom>
 <view class="container more">
   <view class="user flex-wrp">
     <view class="avatar flex-item">
