--- a/test/pages/home/main/main.wxml
+++ b/test/pages/home/main/main.wxml
@@ -1,4 +1,5 @@
-<!--pages/home/home.wxml-->
+<!--pages/home/main/main.wxml-->
+
 <scroll-view scroll-y class="scrollPage">
   <view class="container">
     <view class="userinfo">
@@ -23,6 +24,7 @@
   </view>
   <view class="cu-tabbar-height"></view>
 </scroll-view>
+
 
 
 
