--- a/test/pages/discovery/article-li/article-li.wxml
+++ b/test/pages/discovery/article-li/article-li.wxml
@@ -1,2 +1,24 @@
 <!--pages/discovery/article-li/article-li.wxml-->
-<text>pages/discovery/article-li/article-li.wxml</text>
+<scroll-view scroll-y class="scrollPage">
+  <view class="cu-card article no-card">
+    <view class="cu-item shadow">
+    <!-- 标题 -->
+      <view class="title">
+        <view class="text-cut">无意者 烈火焚身;以正义的烈火拔出黑暗。我有自己的正义，见证至高的烈火吧。</view>
+      </view>
+      <view class="content">
+        <!--文章图片 -->
+        <image src="https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg" mode="aspectFill"></image>
+        <view class="desc">
+          <!-- 文章内容 -->
+          <view class="text-content"> 折磨生出苦难，苦难又会加剧折磨，凡间这无穷的循环，将有我来终结！真正的恩典因不完整而美丽，因情感而真诚，因脆弱而自由！</view>
+          <view>
+          <!-- 文章标签 -->
+            <view class="cu-tag bg-red light sm round">正义天使</view>
+            <view class="cu-tag bg-green light sm round">史诗</view>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
+</scroll-view>
