--- a/test/pages/discovery/article-li/article-li.wxml
+++ b/test/pages/discovery/article-li/article-li.wxml
@@ -9,7 +9,7 @@
 </view>
 
 <view class="mymargin"></view>
-
+<!-- 导航栏 -->
 <scroll-view scroll-x class="bg-white nav">
   <view class="flex text-center">
     <view class="cu-item flex-sub {{index==TabCur?'text-tab':'text-untab'}}" wx:for="{{sortList}}"  bindtap="tabSelect" data-id="{{index}}">
@@ -19,9 +19,9 @@
 </scroll-view>
 
 <!-- 文章卡片列表 -->
-  <view class="cu-card article no-card" wx:for="{{articleList}}" wx:key>
+  <view class="cu-card article no-card" wx:for="{{TabCur==0?articleList:classList}}" wx:key>
     <view class="cu-item shadow">
-      <view class="content">
+      <view class="content" catchtap="articleClick" data-id="{{item.Article_ID}}">
         <!--文章图片 -->
         <image src="{{item.Back_Image}}"></image>
         <view class="desc">
@@ -37,4 +37,5 @@
       </view>
     </view>
   </view>
+
 </scroll-view>
