--- a/test/pages/discovery/article/article.wxss
+++ b/test/pages/discovery/article/article.wxss
@@ -16,7 +16,7 @@
 .cu-card {
   overflow: hidden;
   background-color: white;
-  border-bottom: solid #eeeeee 5rpx;
+  border-bottom: solid #eee 5rpx;
   max-height: 230rpx;
   /* padding-bottom: 25rpx; */
 }
@@ -77,7 +77,7 @@
 
 .myarticle {
   background-color: white;
-  border-bottom: solid #eeeeee 2rpx;
+  border-bottom: solid #eee 2rpx;
   padding-top: 40rpx;
   padding-left: 40rpx;
   padding-bottom: 40rpx;
@@ -87,6 +87,8 @@
 .article-content {
   /* margin-top:20rpx; */
 }
+
+/* 末端 */
 
 .end {
   color: #b2b2b2;
@@ -114,22 +116,47 @@
 }
 
 /* 评论框 */
+
 .cu-bar .search-form input {
   padding-left: 30rpx;
   margin-left: 20rpx;
 }
+
 /* 右边容器 */
-.right-container{
-  margin-right:20rpx;
+
+.right-container {
+  margin-right: 20rpx;
 }
-.comment-bar{
-  position:fixed;
-  bottom:0;
-  left:0;
+
+/* 发评论的框 */
+
+.comment-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding-bottom: 16rpx;
+  padding-top: 16rpx;
+  font-size: 45rpx;
+}
+
+.makecomment-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
   width: 100%;
   padding-bottom: 25rpx;
+  padding-top: 16rpx;
+  padding-right: 5rpx;
+  height: 152rpx;
+  background-color: #f3fbfb;
+  display: flex;
+  align-items: flex-end;
 }
-.refresh{
+
+/* 刷新 */
+
+.refresh {
   color: gray;
   font-size: 28rpx;
   line-height: 1.6;
@@ -140,6 +167,67 @@
   min-height: 40rpx;
   background-color: #f3fbfb;
 }
-.marginbottom{
+
+.marginbottom {
   margin-bottom: 100rpx;
+}
+
+/* 遮罩 */
+
+.mask {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(102, 102, 102, 38%);
+  /* z-index:9999; */
+  top: 0;
+  left: 0;
+  opacity: 0.5;
+}
+
+/* 输入评论的灰色框 */
+
+.comment-container {
+  height: 120rpx;
+  width: 600rpx;
+  background-color: white;
+  padding: 10rpx 10rpx;
+  margin-left: 16rpx;
+  border-radius: 16px;
+  border: solid #eee 2rpx;
+}
+
+/* 发送评论按钮 */
+
+.mybtn {
+  color: white;
+  background-color: #6cc;
+  width: 102rpx;
+  height: 30px;
+  padding: 10rpx 20rpx;
+  border-radius: 5000px;
+  margin-left: 16rpx;
+  min-height: 50rpx;
+  font-weight: 500;
+  font-size: 14px;
+  size: mini;
+}
+
+/* .button{
+  min-height: 50rpx;
+  width: 102rpx;
+  height: 30px;
+} */
+
+/* .button: not([size='mini']) {
+min-height: 40px;
+width: 184px;
+margin-left: auto;
+margin-right: auto;
+} */
+
+.myform {
+  display: flex;
+  width: 100%;
+  height: 152rpx;
 }
