--- a/test/pages/discovery/main/main.wxml
+++ b/test/pages/discovery/main/main.wxml
@@ -1,63 +1,60 @@
 <!--pages/discovery/main/main.wxml-->
 
 <scroll-view scroll-y class="scrollPage">
-<image class='background' src="../../../images/背景图.png" mode="aspectFill"></image>
+  <image class='background' src="../../../images/背景图.png" mode="aspectFill"></image>
 
-<!-- 搜索框 -->
-<view class="cu-bar bg-white search fixed" style="top:{{CustomBar}}px;">
+  <!-- 搜索框 -->
+  <view class="cu-bar bg-white search fixed" style="top:{{CustomBar}}px;">
     <view class="search-form round">
       <text class="cuIcon-search"></text>
       <view bindtap="getSearch" class="myinput"></view>
     </view>
-</view>
+  </view>
 
-<view class="padding-xl"></view>
-
-<view class="cu-bar solid-bottom margin-top">
+  <view class="padding-xl"></view>
+<!-- 文章干货 -->
+  <view class="cu-bar solid-bottom margin-top" bindtap="toMore">
     <view class="action">
       <text class="cuIcon-title text-black">文章干货</text>
     </view>
   </view>
-
-<view class="cu-list grid col-2">
-  <view class="cu-item flex justify-center" catchtap="articleClick" data-id="{{item.Article_ID}}" wx:for="{{articleList}}" wx:key>
-    <view>
-    <image class='article-img'src="{{item.Back_Image}}"></image>
+<!-- 文章卡片 -->
+  <view class="cu-list grid col-2">
+    <view class="cu-item flex justify-center" catchtap="articleClick" data-id="{{item.Article_ID}}" wx:for="{{articleList}}" wx:key>
+      <view>
+        <image class='article-img' src="{{item.Back_Image}}"></image>
+      </view>
+      <view class="article-title">
+        <view class="text-cut">{{item.Title}}</view>
+      </view>
     </view>
-    <view class="article-title">
-      <view class="text-cut">{{item.Title}}</view>
-    </view>
-</view>
-</view>
-<!-- 卡片 -->
-<view class="more" style="float: right">
-    <text class="text-more" catchTap="toMore">更多</text>
-    <text class="cuIcon-right lg text-grey" ></text>
-</view>
+  </view>
+  <!-- 更多 -->
+  <view class="more" bindTap="toMore">
+    <text class="text-more">更多</text>
+    <text class="cuIcon-right lg text-grey"></text>
+  </view>
 
-<view class="cu-bar solid-bottom margin-top">
+  <view class="cu-bar solid-bottom myclass" bindtap="toMore">
     <view class="action">
       <text class="cuIcon-title text-black">心理课堂</text>
     </view>
-</view>
+  </view>
 
-<view class="cu-list grid col-2">
-  <view class="cu-item flex justify-center" catchtap="articleClick" data-id="{{item.Title}}" wx:for="{{classList}}" wx:key>
-    <view>
-    <image class='article-img'src="{{item.Back_Image}}"></image>
+  <view class="cu-list grid col-2">
+    <view class="cu-item flex justify-center" catchtap="articleClick" data-id="{{item.Title}}" wx:for="{{classList}}" wx:key>
+      <view>
+        <image class='article-img' src="{{item.Back_Image}}"></image>
+      </view>
+      <view class="article-title">
+        <view class="text-cut">{{item.Title}}</view>
+      </view>
     </view>
-    <view class="article-title">
-      <view class="text-cut">{{item.Title}}</view>
-    </view>
-</view>
-</view>
-
-<view class="more" style="float: right" bindTap="toMore">
-    <text class="text-more" bindTap="toMore">更多</text>
-    <text class="cuIcon-right lg text-grey" ></text>
-</view>
+  </view>
+<!-- 更多 -->
+  <view class="more" bindTap="toMore">
+    <text class="text-more"> 更多</text>
+    <text class="cuIcon-right lg text-grey"></text>
+  </view>
 
 </scroll-view>
-
-
-
