--- a/test/pages/discovery/article-li/article-li.wxml
+++ b/test/pages/discovery/article-li/article-li.wxml
@@ -4,7 +4,7 @@
 <view class="cu-bar bg-white search fixed" style="top:{{CustomBar}}px;">
     <view class="search-form round">
       <!-- <text class="cuIcon-search"></text> -->
-      <input  placeholder="{{searchData}}" confirm-type="search"></input>
+      <input disabled="true"  placeholder="{{searchData}}"></input>
     </view>
 </view>
 
