--- a/test/pages/discovery/main/main.wxss
+++ b/test/pages/discovery/main/main.wxss
@@ -15,7 +15,8 @@
   height: 30rpx;
 }
 .text-more{
-  color: #66cccc
+  color: #66cccc;
+  font-size:32rpx;
 }
 .grid.col-2>view {
   width: 45%;
@@ -63,9 +64,9 @@ text-align: center;
   size:50px
 }
 .more{
-  margin-bottom: 10rpx;
+  margin: 10rpx 0;
   width: 100%;
-  padding-left: 88%;
+  padding-left: 85%;
 }
 .myinput {
 flex: 1;
