--- a/test/pages/discovery/search/search.wxml
+++ b/test/pages/discovery/search/search.wxml
@@ -7,7 +7,7 @@
     <view class="cu-bar bg-white search fixed" style="top:{{CustomBar}}px;">
       <view class="search-form round">
         <text class="cuIcon-search"></text>
-        <input bindconfirm="searchClick" auto-focus="true" name="searchInput" type="text" placeholder="输入搜索的关键词" confirm-type="search" value="{{inputValue}}"></input>
+        <input maxlength="100" bindconfirm="searchClick" auto-focus="true" name="searchInput" type="text" placeholder="输入搜索的关键词" confirm-type="search" value="{{inputValue}}"></input>
       </view>
       <!-- <view class="action">
         <button form-type="submit" class="cu-btn searchButton shadow-blur round">搜索</button>
