--- a/test/pages/index/index.wxml
+++ b/test/pages/index/index.wxml
@@ -6,7 +6,7 @@
       </view>
 
       <view class='content'>
-          <view>申请获取以下权限</view>
+          <view>LIGHT申请获取以下权限</view>
           <text>获得你的公开信息(昵称，头像等)</text>
       </view>
 
