--- a/test/pages/me/main/main.wxml
+++ b/test/pages/me/main/main.wxml
@@ -36,11 +36,11 @@
         <text>我的收藏</text>
       </view>
     <view class = "function-box" id = "two">
-        <image class = "function-icon" src = "../../../images/me_history.png" alt="历史浏览"></image>
+        <image bindtap="getHistory" class = "function-icon" src = "../../../images/me_history.png" alt="历史浏览"></image>
         <text>历史浏览</text>
       </view>
       <view class = "function-box" id = "three">
-        <image class = "function-icon" src = "../../../images/me_collection.png" alt="测试记录"></image>
+        <image bindtap="getTest" class = "function-icon" src = "../../../images/me_collection.png" alt="测试记录"></image>
         <text>测试记录</text>
       </view>
       <view class = "function-box" id = "four">
